drawing hatches partly

--- a/book/design_workflow/general_drawing/cross_section_indications.ipynb
+++ b/book/design_workflow/general_drawing/cross_section_indications.ipynb
@@ -41,17 +41,17 @@
     "|     |                                       |![Brick3](Images/Brick3.png)                |              | ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png) |              |\n",
     "| 2   | Stone-like materials                  | ![Stone_like](Images/Stone_Like.png) | ![grey_circle](Images/grey_circle.png) | ![grey_circle](Images/grey_circle.png) | ![grey_circle](Images/grey_circle.png) | ![grey_circle](Images/grey_circle.png) | ![grey_circle](Images/grey_circle.png) | ![grey_circle](Images/grey_circle.png) |e.g. fireproof material, roof tiles |\n",
     "| 3   | Non-brick masonry                     | ![Non_Brick](Images/Non_Brick.png)| ![grey_circle](Images/grey_circle.png) | ![grey_circle](Images/grey_circle.png) | ![grey_circle](Images/grey_circle.png) | ![grey_circle](Images/grey_circle.png) | ![grey_circle](Images/grey_circle.png) | ![grey_circle](Images/grey_circle.png) |e.g. concrete masonry units    |\n",
-    "| 4   | Non load carrying division walls      |![Non_Load1](Images/Non_Load1.png)               |              |       |      |        |       |       |                          |\n",
-    "|     |                                       |![Non_Load2](Images/Non_Load2.png)             |              |       |      |        |       |       |                          |\n",
-    "|     |                                       |![Non_Load3](Images/Non_Load3.png)             |              |       |      |        |       |       |                          |\n",
-    "| 5   | Reinforced concrete (cast in situ)    |![Reinforced_Concrete1](Images/Reinforced_Concrete1.png)  |              |       |      |        |       |       |                          |\n",
-    "|     |                                       |![Reinforced_Concrete2](Images/Reinforced_Concrete2.png)  |              |       |      |        |       |       |                          |\n",
-    "| 6   | Reinforced concrete (precast)         |![Reinforced_Concrete_Precast](Images/Reinforced_Concrete_Precast.png)|   |       |      |        |       |       |                          |\n",
-    "| 7   | Plain concrete                        |![Plain_Concrete](Images/Plain_Concrete.png)|       |       |      |        |       |       |e.g. lightweight concrete |\n",
-    "| 8   | Decorative concrete                   |![Decorative_Concrete](Images/Decorative_Concrete.png)    |       |       |      |        |       |       |                          |\n",
-    "| 9   | Natural stone                         |![Natural_Stone](Images/Natural_Stone.png)  |       |       |      |        |       |       |                          |\n",
-    "| 10  | Single floor/wall finishing           |![Single_Floor_Wall](Images/Single_Floor_Wall.png)     |       |       |      |        |       |       | e.g. plaster     |\n",
-    "| 11  | Composite floor/wall finishing        |![Composite](Images/Composite.png)              |       |       |      |        |       |       |                          |\n"
+    "| 4   | Non load carrying division walls      |![Non_Load1](Images/Non_Load1.png)               | ![black_circle](Images/black_circle.png)  | ![black_circle](Images/black_circle.png) |      |        |       |       |                          |\n",
+    "|     |                                       |![Non_Load2](Images/Non_Load2.png)             |              |       | ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png) |       |       |                          |\n",
+    "|     |                                       |![Non_Load3](Images/Non_Load3.png)             |              |       |      |        | ![grey_circle](Images/grey_circle.png) | ![grey_circle](Images/grey_circle.png) |                          |\n",
+    "| 5   | Reinforced concrete (cast in situ)    |![Reinforced_Concrete1](Images/Reinforced_Concrete1.png)  | ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png) |      |        |       |       |                          |\n",
+    "|     |                                       |![Reinforced_Concrete2](Images/Reinforced_Concrete2.png)  | | ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png) | |\n",
+    "| 6   | Reinforced concrete (precast)         |![Reinforced_Concrete_Precast](Images/Reinforced_Concrete_Precast.png)| ![black_circle](Images/black_circle.png) |  ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png)|                          |\n",
+    "| 7   | Plain concrete                        |![Plain_Concrete](Images/Plain_Concrete.png)| ![grey_circle](Images/grey_circle.png) | ![grey_circle](Images/grey_circle.png) | ![grey_circle](Images/grey_circle.png) | ![grey_circle](Images/grey_circle.png) | ![grey_circle](Images/grey_circle.png) | ![grey_circle](Images/grey_circle.png) |e.g. lightweight concrete |\n",
+    "| 8   | Decorative concrete                   |![Decorative_Concrete](Images/Decorative_Concrete.png)    | ![black_circle](Images/black_circle.png) |  ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png) |                          |\n",
+    "| 9   | Natural stone                         |![Natural_Stone](Images/Natural_Stone.png)  | ![black_circle](Images/black_circle.png) |  ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png)|       |                          |\n",
+    "| 10  | Single floor/wall finishing           |![Single_Floor_Wall](Images/Single_Floor_Wall.png)     |       |       |      |        | ![grey_circle](Images/grey_circle.png) | ![grey_circle](Images/grey_circle.png)    | e.g. plaster     |\n",
+    "| 11  | Composite floor/wall finishing        |![Composite](Images/Composite.png)              |       |       | ![grey_circle](Images/grey_circle.png) | ![grey_circle](Images/grey_circle.png) | ![grey_circle](Images/grey_circle.png) | ![grey_circle](Images/grey_circle.png)    |                          |\n"
    ]
   },
   {
@@ -90,7 +90,8 @@
     "| No. | Description                   | Hatch                           | Scale |              |              |              |              |              |Remarks       |\n",
     "| --- | -----------------------       | -----                           | ----- | -----        | ----         | ----         | ----         | ----         | ---          |\n",
     "|     |                               |                                 | 1:100 |1:50          |1:20          |1:10          |1:5           |1:1           |              | \n",
-    "| 18  | Steel                         |![Steel](Images/Steel1.png)|       |       |      |        |       |       |                          |\n",
+    "| 18  | Steel                         |![Steel](Images/Steel1.png)| ![black_circle](Images/black_circle.png) |  ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png) |                          |\n",
+    "| 18  |                         |![Steel](Images/Steel2.png)|  | | | | ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png) |                          |\n",
     "| 19  | Aluminium, brass, copper etc. | ![Aluminium](Images/Aluminium.png)|       |       |      |        |       |       |                          |\n",
     "| 20  | Lead                          |![Lead](Images/Lead.png)|       |       |      |        |       |       |                          |\n",
     "| 21  | Zinc                          |![Zinc](Images/Zinc.png)|       |       |      |        |       |       |                          |"
@@ -110,15 +111,20 @@
     "| No. | Description    | Hatch                                 | Scale |       |      |              |              |              |Remarks       |\n",
     "| --- | -------------- | -----                                 | ----- | ----- | ---- | ----         | ----         | ----         | ---          |\n",
     "|     |                |                                       | 1:100 |1:50   |1:20  |1:10          |1:5           |1:1           |              | \n",
-    "| 22  | Synthetics     | ![Synthetics](Images/Synthetics.png)   |       |       |      |        |       |       |                          |\n",
-    "| 23  | Sealant        | ![Sealant](Images/Sealant.png)      |       |       |      |        |       |       |                          |\n",
-    "| 24  | Foil, bitumen  | ![Foil](Images/Foil.png)         |       |       |      |        |       |       |                          |\n",
-    "| 25  | Ground level   | ![Ground_Level](Images/Ground_Level.png) |       |       |      |        |       |       |                          |\n",
-    "| 26  | Sand           | ![Sand](Images/Sand.png)         |       |       |      |        |       |       |                          |\n",
-    "| 27  | Gravel         | ![Gravel](Images/Gravel.png)      |       |       |      |        |       |       |                          |\n",
-    "| 28  | Water          | ![Water](Images/Water.png)     |       |       |      |        |       |       |                          |\n",
-    "| 29  | Glass          | ![Glass](Images/Glass.png)      |       |       |      |        |       |       |                          |"
+    "| 22  | Synthetics     | ![Synthetics](Images/Synthetics.png)   |       |       |      |        | ![grey_circle](Images/grey_circle.png) | ![grey_circle](Images/grey_circle.png)  |                          |\n",
+    "| 23  | Sealant        | ![Sealant](Images/Sealant.png)      |       |       |      |        |![grey_circle](Images/grey_circle.png) | ![grey_circle](Images/grey_circle.png) |                          |\n",
+    "| 24  | Foil, bitumen  | ![Foil](Images/Foil.png)         |       |       |      |        | ![grey_circle](Images/grey_circle.png) | ![grey_circle](Images/grey_circle.png) |                          |\n",
+    "| 25  | Ground level   | ![Ground_Level](Images/Ground_Level.png) | ![black_circle](Images/black_circle.png) |  ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png) |                          |\n",
+    "| 26  | Sand           | ![Sand](Images/Sand.png)         | ![black_circle](Images/black_circle.png) |  ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png)|                          |\n",
+    "| 27  | Gravel         | ![Gravel](Images/Gravel.png)      | ![black_circle](Images/black_circle.png) |  ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png) |                          |\n",
+    "| 28  | Water          | ![Water](Images/Water.png)     | ![black_circle](Images/black_circle.png) |  ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png) |                          |\n",
+    "| 29  | Glass          | ![Glass](Images/Glass.png)      |       |       |      | ![grey_circle](Images/grey_circle.png) | ![grey_circle](Images/grey_circle.png) | ![grey_circle](Images/grey_circle.png) |                          |"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
