degrees image added

--- a/book/design_workflow/general_drawing/cross_section_indications.ipynb
+++ b/book/design_workflow/general_drawing/cross_section_indications.ipynb
@@ -68,12 +68,12 @@
     "|No.| Description                        | Hatch                                | Scale        |              |              |              |              |              |Remarks       |\n",
     "|---| -----------------------            | -----                                | -----        | -----        | ----         | ----         | ----         | ----         | ---          |\n",
     "|   |                                    |                                      | 1:100        |1:50          |1:20          |1:10          |1:5           |1:1           |              | \n",
-    "|12 | Softwood                           |![Softwood](Images/Softwood.png)     |       |       |      |        |       |       |                          |\n",
-    "|13 | Hardwood                           |![Hardwood](Images/Hardwood.png)      |       |       |      |        |       |       |                          |\n",
-    "|14 | Softwood/Hardwood (along the grain)|![Soft_Hardwood_Along_The_Grain](Images/Soft_Hardwood_Along_The_Grain.png)       |       |       |      |        |       |       |                          |\n",
-    "|15 | Glued seam                         |![Glued_Seam](Images/Glued_Seam.png)       |       |       |      |        |       |       |                          |\n",
-    "|16 | Cladding panel                     |![Cladding_Panel](Images/Cladding_Panel.png)     |       |       |      |        |       |       |                          |\n",
-    "|17 | Isolation panel                    |![Isolation_Panel](Images/Isolation_Panel.png)    |       |       |      |        |       |       |                          |"
+    "|12 | Softwood                           |![Softwood](Images/Softwood.png)     |       |       | ![black_circle](Images/black_circle.png) |  ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png)         |                |\n",
+    "|13 | Hardwood                           |![Hardwood](Images/Hardwood.png)      |       |       | ![black_circle](Images/black_circle.png) |  ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png)  | ![black_circle](Images/black_circle.png)          |               |\n",
+    "|14 | Softwood/Hardwood (along the grain)|![Soft_Hardwood_Along_The_Grain](Images/Soft_Hardwood_Along_The_Grain.png)       |       |       |      | ![black_circle](Images/black_circle.png) |  ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png) |                          |\n",
+    "|15 | Glued seam                         |![Glued_Seam](Images/Glued_Seam.png)       |       |       |      | ![black_circle](Images/black_circle.png) |  ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png) |                          |\n",
+    "|16 | Cladding panel                     |![Cladding_Panel](Images/Cladding_Panel.png)     |             |  |       | ![grey_circle](Images/grey_circle.png) | ![grey_circle](Images/grey_circle.png) | ![grey_circle](Images/grey_circle.png) |                         |\n",
+    "|17 | Isolation panel                    |![Isolation_Panel](Images/Isolation_Panel.png)    |       |       |      | ![grey_circle](Images/grey_circle.png) | ![grey_circle](Images/grey_circle.png) | ![grey_circle](Images/grey_circle.png)  | ![60degrees](Images/60degrees.png) |"
    ]
   },
   {
@@ -90,11 +90,11 @@
     "| No. | Description                   | Hatch                           | Scale |              |              |              |              |              |Remarks       |\n",
     "| --- | -----------------------       | -----                           | ----- | -----        | ----         | ----         | ----         | ----         | ---          |\n",
     "|     |                               |                                 | 1:100 |1:50          |1:20          |1:10          |1:5           |1:1           |              | \n",
-    "| 18  | Steel                         |![Steel](Images/Steel1.png)| ![black_circle](Images/black_circle.png) |  ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png) |                          |\n",
+    "| 18  | Steel                         |![Steel](Images/Steel1.png)| ![black_circle](Images/black_circle.png) |  ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png) | in drawings for construction the section may be left open |\n",
     "| 18  |                         |![Steel](Images/Steel2.png)|  | | | | ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png) |                          |\n",
-    "| 19  | Aluminium, brass, copper etc. | ![Aluminium](Images/Aluminium.png)|       |       |      |        |       |       |                          |\n",
-    "| 20  | Lead                          |![Lead](Images/Lead.png)|       |       |      |        |       |       |                          |\n",
-    "| 21  | Zinc                          |![Zinc](Images/Zinc.png)|       |       |      |        |       |       |                          |"
+    "| 19  | Aluminium, brass, copper etc. | ![Aluminium](Images/Aluminium.png)|       |       | ![grey_circle](Images/grey_circle.png) | ![grey_circle](Images/grey_circle.png) | ![grey_circle](Images/grey_circle.png) | ![grey_circle](Images/grey_circle.png) |                          |\n",
+    "| 20  | Lead                          |![Lead](Images/Lead.png)|       |       | ![grey_circle](Images/grey_circle.png) | ![grey_circle](Images/grey_circle.png) | ![grey_circle](Images/grey_circle.png) | ![grey_circle](Images/grey_circle.png)| mention density |\n",
+    "| 21  | Zinc                          |![Zinc](Images/Zinc.png)|       |       | ![grey_circle](Images/grey_circle.png) | ![grey_circle](Images/grey_circle.png) | ![grey_circle](Images/grey_circle.png) | ![grey_circle](Images/grey_circle.png) | mension material number |"
    ]
   },
   {
