60 degrees added correctly

--- a/book/design_workflow/general_drawing/cross_section_indications.ipynb
+++ b/book/design_workflow/general_drawing/cross_section_indications.ipynb
@@ -27,9 +27,9 @@
     "Scale at which the hatch needs  \n",
     " to be used with the material added in text\n",
     "```\n",
+    "The tables are based on the Dutch code NEN 47.\n",
     "````\n",
     "  \n",
-    "The tables are based on the Dutch code NEN 47.\n",
     "\n",
     "## Stone-like materials\n",
     "\n",
@@ -73,7 +73,7 @@
     "|14 | Softwood/Hardwood (along the grain)|![Soft_Hardwood_Along_The_Grain](Images/Soft_Hardwood_Along_The_Grain.png)       |       |       |      | ![black_circle](Images/black_circle.png) |  ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png) |                          |\n",
     "|15 | Glued seam                         |![Glued_Seam](Images/Glued_Seam.png)       |       |       |      | ![black_circle](Images/black_circle.png) |  ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png) |                          |\n",
     "|16 | Cladding panel                     |![Cladding_Panel](Images/Cladding_Panel.png)     |             |  |       | ![grey_circle](Images/grey_circle.png) | ![grey_circle](Images/grey_circle.png) | ![grey_circle](Images/grey_circle.png) |                         |\n",
-    "|17 | Isolation panel                    |![Isolation_Panel](Images/Isolation_Panel.png)    |       |       |      | ![grey_circle](Images/grey_circle.png) | ![grey_circle](Images/grey_circle.png) | ![grey_circle](Images/grey_circle.png)  | ![60degrees](Images/60degrees.png) |"
+    "|17 | Isolation panel                    |![Isolation_Panel](Images/Isolation_Panel.png)    |       |       |      | ![grey_circle](Images/grey_circle.png) | ![grey_circle](Images/grey_circle.png) | ![grey_circle](Images/grey_circle.png)  | ![degrees](Images/degrees_60.png) |"
    ]
   },
   {
