--- a/book/examples/steel/3d.md
+++ b/book/examples/steel/3d.md
@@ -13,7 +13,7 @@
    "source": [
     "# 3D Element \n",
     "\n",
-    "<iframe src=\"../ProfileHEB.html\" width=\"600\" height=\"400\" frameborder=\"0\"></iframe>"
+    "<iframe src="../ProfileHEB.html" width="600" height="300" frameborder="0"></iframe>"
    ]
   }
  ],
