--- a/book/examples/steel/3d.md
+++ b/book/examples/steel/3d.md
@@ -1,41 +1,3 @@
-{
- "cells": [
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 3D object"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 3D Element \n",
-    "\n",
-    "<iframe src="../ProfileHEB.html" width="600" height="300" frameborder="0"></iframe>"
-   ]
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "base",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.13"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 2
-}
+# 3D Objects
+
+<iframe src="../ProfileHEB.html" width="600" height="300" frameborder="0"></iframe>
