--- a/book/examples/steel/3d.md
+++ b/book/examples/steel/3d.md
@@ -1,3 +1,3 @@
 # 3D Objects
 
-<iframe src=".../_static/ProfileHEB.html" width="600" height="300" frameborder="0"></iframe>
+<iframe src="../../_static/ProfileHEB.html" width="600" height="300" frameborder="0"></iframe>
