Vademeecum chapter 4 addition

--- a/book/design_workflow/general_drawing/line_types_and_hatching.ipynb
+++ b/book/design_workflow/general_drawing/line_types_and_hatching.ipynb
@@ -4,6 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Line types \n",
+    "| Line Type                                          | Description          |\n",
+    "|----------------------------------------------------|----------------------|\n",
+    "| ![Continuous_Line](Images/Continuous_Line.jpg)     | Continuous Line      |\n",
+    "| ![Dashed_Line](Images/Dashed_Line.jpg)             | Dashed Line          |\n",
+    "| ![Mixed_Dashed_Line](Images/Mixed_Dashed_Line.jpg) | Mixed Dashed Line    |\n",
+    "| ![Dotted_Line](Images/Dotted_Line.jpg)             | Dotted Line          |\n",
+    "\n",
+    "\n",
     "# Cross section indications\n",
     "\n",
     "For each material, a different hatch is used. Furthermore, the type of hatch can differ as the scale of the drawing\n",
@@ -124,7 +133,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "```{note}\n",
+    "The given designation of line types and shading apply to construction drawings and are based on the NEN2302.\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
