small mistake in foundations methods solved for align

--- a/book/design/foundations/foundation_methods_2.ipynb
+++ b/book/design/foundations/foundation_methods_2.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "```{figure} Images/fm2_pile.png\n",
     "---\n",
-    "align: rights\n",
+    "align: right\n",
     "---\n",
     "```\n",
     "There are several criteria which need to be kept in mind when choosing a pile type:\n",
