--- a/book/design/concrete/moment_normalforce_interaction.ipynb
+++ b/book/design/concrete/moment_normalforce_interaction.ipynb
@@ -35,12 +35,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "f_ck = 30 #[N/mm^2] C30/37\n",
+    "f_cd = f_ck/1.5\n",
+    "alfa = 0.75\n",
+    "beta = 7/18\n",
+    "\n",
     "f_yk = 500 #[N/mm^2] B500B\n",
+    "f_yd = f_yk/1.15\n",
+    "\n",
     "c = 25 #[mm]\n",
     "phi_bgl = 6 #[mm]\n",
     "n_hw = 4 #[-] aantal staven\n",
@@ -50,8 +56,8 @@
     "phi_eff = 1.2 #[-]\n",
     "e = 100 #[mm]\n",
     "\n",
-    "b = 250 #[mm]\n",
-    "h = 250 #[mm]\n",
+    "b = 0.25 #[m]\n",
+    "h = 0.25 #[m]\n",
     "N_Ed = 261 #[kN]"
    ]
   },
@@ -64,10 +70,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "52450.938216455674\n",
+      "-4012120520.1977296\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = c + phi_bgl + phi_hw/2\n",
+    "A_s = 1/4 * np.pi * phi_hw**2 * n_hw\n",
+    "x_u0 = A_s * f_yd / (alfa * b * f_cd)\n",
+    "print(x_u0)\n",
+    "M_Rd0 = A_s * f_yd * (h - alfa - beta * x_u0)\n",
+    "N_Ed = 0\n",
+    "print(M_Rd0)"
+   ]
   },
   {
    "cell_type": "markdown",
