--- a/book/design/concrete/moment_normalforce_interaction.ipynb
+++ b/book/design/concrete/moment_normalforce_interaction.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,9 +43,12 @@
     "f_cd = f_ck/1.5\n",
     "alfa = 0.75\n",
     "beta = 7/18\n",
+    "eps_c2 = 0.00175\n",
+    "eps_cu3 = 0.0035\n",
     "\n",
     "f_yk = 500 #[N/mm^2] B500B\n",
     "f_yd = f_yk/1.15\n",
+    "eps_s = 0.002175\n",
     "\n",
     "c = 25 #[mm]\n",
     "phi_bgl = 6 #[mm]\n",
@@ -56,8 +59,8 @@
     "phi_eff = 1.2 #[-]\n",
     "e = 100 #[mm]\n",
     "\n",
-    "b = 0.25 #[m]\n",
-    "h = 0.25 #[m]\n",
+    "b = 250 #[mm]\n",
+    "h = 250 #[mm]\n",
     "N_Ed = 261 #[kN]"
    ]
   },
@@ -70,15 +73,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "52450.938216455674\n",
-      "-4012120520.1977296\n"
+      "a = 37.00 mm\n",
+      "A_s = 452.39 mm^2\n",
+      "x_u0 = 52.45 mm\n",
+      "M_Rd0 = 37.9 kNm\n"
      ]
     }
    ],
@@ -86,10 +91,13 @@
     "a = c + phi_bgl + phi_hw/2\n",
     "A_s = 1/4 * np.pi * phi_hw**2 * n_hw\n",
     "x_u0 = A_s * f_yd / (alfa * b * f_cd)\n",
-    "print(x_u0)\n",
-    "M_Rd0 = A_s * f_yd * (h - alfa - beta * x_u0)\n",
+    "M_Rd0 = A_s * f_yd * (h - a - beta * x_u0) / 1e6\n",
     "N_Ed = 0\n",
-    "print(M_Rd0)"
+    "\n",
+    "print(f'a = {a:.2f} mm')\n",
+    "print(f'A_s = {A_s:.2f} mm^2')\n",
+    "print(f'x_u0 = {x_u0:.2f} mm')\n",
+    "print(f'M_Rd0 = {M_Rd0:.1f} kNm')"
    ]
   },
   {
@@ -101,10 +109,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x_u1 = 97.74 mm\n",
+      "e_sc = e_st = 88.00 mm\n",
+      "N_st1 = N_sc1 = 1.968e+05 N\n",
+      "N_c1 = 3.665e+05 N\n",
+      "M_Rd1 = 66.5 kNm\n",
+      "N_Ed1 = 366.5 kN\n"
+     ]
+    }
+   ],
+   "source": [
+    "x_u1 = a / (1 - eps_s/eps_cu3)\n",
+    "e_sc = e_st = h/2 - a\n",
+    "eps_st1 = eps_s\n",
+    "eps_sc1 = eps_s\n",
+    "\n",
+    "N_st1 = N_sc1 = E_s * eps_st1 * A_s\n",
+    "N_c1 = alfa * b * f_cd * x_u1\n",
+    "eps_c1 = h/2 - beta * x_u1\n",
+    "M_Rd1 = (N_st1*e_st + N_sc1 * e_sc + N_c1 * eps_c1) / 1e6\n",
+    "N_Ed1 = (- N_st1 + N_sc1 + N_c1) / 1e3\n",
+    "\n",
+    "print(f'x_u1 = {x_u1:.2f} mm')\n",
+    "print(f'e_sc = e_st = {e_sc:.2f} mm')\n",
+    "print(f'N_st1 = N_sc1 = {N_sc1:.3e} N')\n",
+    "print(f'N_c1 = {N_c1:.3e} N')\n",
+    "print(f'M_Rd1 = {M_Rd1:.1f} kNm')\n",
+    "print(f'N_Ed1 = {N_Ed1:.1f} kN')"
+   ]
   },
   {
    "cell_type": "markdown",
