Update example calculations and drawings

--- a/book/examples/calculation/beam.ipynb
+++ b/book/examples/calculation/beam.ipynb
@@ -159,7 +159,7 @@
     "\n",
     "For the Ultimate Limit State (ULS), we need to apply the so-called Fundamental Load Combination. The loads must be multiplied by a partial factor $\\gamma_{f}$ (formerly known as load or safety factors) to ensure additional safety. These factors depend on the consequence class of the building and the nature of the load. $\\gamma_{G}$ and $\\gamma_{Q}$ are the partial factors for the permanent load and the variable load, respectively.\n",
     "\n",
-    "According to Eurocode 1990, the permanent load may be reduced by a reduction factor $\\ksi$. This is set at 0.89 in the National Annex to the Eurocode. For most buildings (including offices), $\\gamma_{G} is 1.35 and $\\gamma_{Q}$ is 1.5. The partial factor for the permanent load is multiplied by the reduction factor: $0.89 × 1.35 = 1.2$ (the value of the former load factor for the permanent load). We will use this value as the partial factor for the permanent load. Therefore, for the office building: $q_{ULS} = 1.2 \\cdot q_G + 1.5 \\cdot q_Q$. With these quantities, we can calculate the moment and thus the bending stress, and then check the strength by performing the unity check (U.C.):\n",
+    "According to Eurocode 1990, the permanent load may be reduced by a reduction factor $ξ$. This is set at 0.89 in the National Annex to the Eurocode. For most buildings (including offices), $\\gamma_{G} is 1.35 and $\\gamma_{Q}$ is 1.5. The partial factor for the permanent load is multiplied by the reduction factor: $0.89 × 1.35 = 1.2$ (the value of the former load factor for the permanent load). We will use this value as the partial factor for the permanent load. Therefore, for the office building: $q_{ULS} = 1.2 \\cdot q_G + 1.5 \\cdot q_Q$. With these quantities, we can calculate the moment and thus the bending stress, and then check the strength by performing the unity check (U.C.):\n",
     "\n",
     "$U.C. = /frac{\\sigma_{m,d}}{f_{m,d}} <= 1.0$\n",
     "\n",
@@ -181,9 +181,7 @@
     "\n",
     "The stress must not exceed the material strength of $f_{m;d} = 235 [N/mm^2]$. We check this with the U.C.:\n",
     "\n",
-    "$U.C. = \\frac{\\sigma_{m,d}}{f_{m;d}} = \\dfrac{256.2 [N/mm^2]}{235 [N/mm^2]} = 1.1 > 1 \\Rightarrow$ \n",
-    "\n",
-    "\\textcolor{red}{Does not comply.}\n",
+    "$U.C. = \\frac{\\sigma_{m,d}}{f_{m;d}} = \\dfrac{256.2 [N/mm^2]}{235 [N/mm^2]} = 1.1 > 1 \\Rightarrow$ Does not comply.\n",
     "\n",
     "The profile is too slender. We need a profile with a larger section modulus $W$:\n",
     "\n",
