--- a/book/design_workflow/general_mechanics/beams_with_multiple_supports.ipynb
+++ b/book/design_workflow/general_mechanics/beams_with_multiple_supports.ipynb
@@ -18,6 +18,7 @@
     "---\n",
     "scale: 100%\n",
     "---\n",
+    "```\n",
     "\n",
     "| Type | M(1)  | M2     | M(2)   | M3     | M(3)   | R1     | R2     | R3     | R4     |\n",
     "|------|--------|--------|--------|--------|--------|--------|--------|--------|--------|\n",
@@ -34,11 +35,13 @@
     "\n",
     "The numbers in the tables are related to the concentrated loads working on the structure. The bending moments and support reactions in the designated points are found by multiplying the factors in the table with F x L or F.\n",
     "\n",
-    "For example:\n",
     "- M(1) is the maximum bending in beam (1).\n",
     "- M3 is the hogging moment located at support 3.\n",
     "- R2 is the support reaction in support 2.\n",
     "\n",
+    "\n",
+    "`````{admonition} Example\n",
+    ":class: tip\n",
     "For situation c:\n",
     "- F = 30 kN\n",
     "- L = 8 m\n",
@@ -46,7 +49,8 @@
     "The calculations are as follows:\n",
     "- M(1) = 0.175 x 30 x 8 kNm\n",
     "- M3 = -0.15 x 30 x 8 kNm\n",
-    "- R2 = 1.15 x 30 kN\n"
+    "- R2 = 1.15 x 30 kN\n",
+    "`````"
    ]
   },
   {
@@ -64,6 +68,7 @@
     "---\n",
     "scale: 100%\n",
     "---\n",
+    "```\n",
     "\n",
     "| Type | M(1) location rel. to 1* | M2     | M(2) location rel. to 2** | M3     | M(3) | R1     | R2     | R3     | R4     |\n",
     "|------|---------------------------|--------|----------------------------|--------|------|--------|--------|--------|--------|\n",
@@ -83,26 +88,36 @@
     "$M = factor * q * L^2$  \n",
     "$R = factor * q * L$\n",
     "\n",
+    "*) location of bending moment M(1) in relation to support 1 (distance = factor x L)  \n",
+    "**) location of bending moment M(2) in relation to support 2 (distance = factor x L) \n",
+    "\n",
     "The numbers in the tables are related to the concentrated loads\n",
     "working on the structure. The bending moments and support reactions in\n",
     "the designated points are found by multiplying the factors in the table with\n",
     "$q * L^2$ or $q * L$.\n",
     "\n",
-    "For example: M(1) is the maximum bending in beam\n",
-    "(1). M3 is the hogging moment located at\n",
-    "support 3. R2 is the support reaction in support 2.  \n",
-    "  \n",
+    "- M(1) is the maximum bending in beam (1).  \n",
+    "- M3 is the hogging moment located at support 3.   \n",
+    "- R2 is the support reaction in support 2.   \n",
+    "\n",
+    "`````{admonition} Example\n",
+    ":class: tip\n",
     "For situation m:  \n",
-    "$F = 5 kN/m$\n",
-    "$L = 6 m$  \n",
-    "$M(1) = 0,0735 * 5 * 62 kNm$  \n",
-    "$M3 = -0,0333 * 5 * 62 kNm$  \n",
-    "$R2 = 1,2001 * 5 * 6 kN$  \n",
-    "  \n",
-    "*) location of bending moment M(1) in relation to support 1 (distance = factor x L)  \n",
-    "**) location of bending moment M(2) in relation to support 2 (distance = factor\n",
-    "x L)  "
+    "- $q = 5 kN/m$  \n",
+    "- $L = 6 m$  \n",
+    "\n",
+    "The calculations are as follows:\n",
+    "- $M(1) = 0,0735 * 5 * 62 \\ kNm$  \n",
+    "- $M3 = -0,0333 * 5 * 62 \\ kNm$  \n",
+    "- $R2 = 1,2001 * 5 * 6 \\ kN$\n",
+    "`````\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
